# icalendar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: ast.rs  components.rs  error.rs  internal.rs  lib.rs  params.rs  properties.rs  rrule.rs  values.rs
src/ast/: component.rs  lexer.rs  params.rs  parser.rs  token.rs
src/ast/lexer/: tests.rs  unfold.rs
src/components/: event.rs  free_busy.rs  journal.rs  timezone.rs  todo.rs
src/properties/: calendar.rs  component.rs
src/properties/component/: alarms.rs  change.rs  datetime.rs  descriptive.rs  misc.rs  recurrence.rs  relationship.rs  timezone.rs
tests/fixtures/rrule/: complex_recurrence.ics
