[package]
name = "icalendar"
version = "0.1.0"
authors = ["Danila Volkov <danila.volkov@noxlovette.com>"]
description = "RFC 5545 in Rust"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/noxlovette/icalendar"

[dependencies]
chrono = { version = "0.4.45" }
base64 = "0.22.1"
bytes = "1.12"
chrono-tz = "0.10.4"
langtag = "1.1.0"
memchr = "2"
nanoid = "0.5.0"
phf = { version = "0.14", features = ["macros"] }
thiserror = "2"
url = "2.5.8"
